<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_gravity="center"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Balázs"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_et_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tanuló"
                android:hint="@string/job" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:text="23"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="95berta.balazs@gmail.com"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                tools:text="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_et_password"
                android:inputType="textPassword"
                android:text="pass123"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingBottom="10dp"
                tools:text="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_et_repassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:text="pass123"
                android:layout_height="wrap_content"
                android:hint="@string/repassword"
                android:paddingBottom="10dp"
                tools:text="@string/repassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/register_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/register_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textFontWeight="700"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/registerPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>